feat: VoyageHistory 생성